samples/_failures_safe/1761355780_a99721_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7bffd19f.c: In function ‘main’:
./samples/SAFE/__tmp_7bffd19f.c:167:5: error: expected declaration or statement at end of input
  167 |     printf("Shortest paths from node 0:\n");
      |     ^~~~~~
